interpreter/examples/bad/type/undecl_var.dl
// Undeclared variable error
print x
